Minor changes after comments from Guy

--- a/ConfirmationOfStatusReport.tex
+++ b/ConfirmationOfStatusReport.tex
@@ -47,7 +47,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-\noindent A model-independent measurement of the CKM angle $\gamma$ is performed in $B^\pm\to Dh^\pm (h = K, \pi)$ decays, where $D\to K^+K^-\pi^+\pi^-$, using the LHCb Run\,$1$+$2$ dataset. The measurement performed in bins of phase space, which are optimised for sensitivity to local $C\!P$ asymmetries. The analysis requires external information on charm strong phases, which are determined from quantum-correlated $D\bar{D}$ pairs at BESIII.
+\noindent A model-independent measurement of the CKM angle $\gamma$ is performed in $B^\pm\to Dh^\pm (h = K, \pi)$ decays, where $D\to K^+K^-\pi^+\pi^-$, using the LHCb Run\,$1$+$2$ dataset. The measurement performed in bins of phase space, which are optimised for sensitivity to local $C\!P$ asymmetries. The analysis requires external charm strong-phase inputs, which are determined from quantum-correlated $D\bar{D}$ pairs at BESIII.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -119,17 +119,19 @@ A powerful decay channel for the measurement of $\gamma$ is $B^\pm\to DK^\pm$, w
   \label{fig_feynman_B2DK}
 \end{figure}
 
-An interesting class of $D$ final states are self-conjugate multi-body $D$ decays. Since the strong-phase difference between the $D^0$ and $\bar{D^0}$ decays varies across the multi-dimensional phase space of the charm-meson decay, the sensitivity to $\gamma$ is diluted when considering the decay inclusively. However, by performing measurements in suitably chosen localised regions of phase space, the dilution effects can be minimised and the sensitivity to $\gamma$ enhanced~\cite{BondarPoluektov2008,GiriGrossmanSofferZupan}.
+An interesting class of $D$ final states are self-conjugate multi-body $D$ decays. Since the strong-phase difference between the $D^0$ and $\bar{D^0}$ decays varies across the multi-dimensional phase space of the charm-meson decay, the sensitivity to $\gamma$ is diluted when considering the decay inclusively. However, by performing measurements in localised regions of phase space, the dilution effects can be minimised and the sensitivity to $\gamma$ enhanced~\cite{BondarPoluektov2008,GiriGrossmanSofferZupan}.
 
 The channel $D\to K^+K^-\pi^+\pi^-$ has been proposed as a promising decay mode for measuring $\gamma$~\cite{cite:RademackerWilkinson}. It has a rich resonance structure and contains only charged particles in the final state, which is advantageous for experiments at a hadron collider. The availability of a detailed amplitude model for this process, based on an amplitude analysis of LHCb data~\cite{LHCb-PAPER-2018-041}, opens up the possibility of identifying those regions of phase space that have high sensitivity to $\gamma$, which then can be probed in an analysis of $B^\pm\to DK^\pm$ decays.
 
 The interpretation of the $C\!P$ asymmetries and other observables in these regions, also known as bins of phase space, requires knowledge of the strong-phase difference between the $D^0$ and $\bar{D^0}$ meson decays. This knowledge can be obtained from the same amplitude model used to guide the measurements, but it is preferable to perform a direct measurement at BESIII, using quantum-correlated charm decays at the $\psi(3770)$ resonance. This approach ensures that the determination of $\gamma$ has no dependence on model assumptions. 
 
-Binned strong-phase measurements have previously been done in other decay modes~\cite{LHCb-PAPER-2020-019}, but no such measurement for $D^0\to K^+K^-\pi^+\pi^-$ exists yet. Not only would such a measurement complement the current measurements of $\gamma$, but it would also be crucial information for future studies of $D^0$-$\bar{D^0}$ oscillations and charm $C\!P$ violation using this channel.
+Binned strong-phase measurements have previously been done in other decay modes~\cite{LHCb-PAPER-2020-019}, but no such measurement for $D^0\to K^+K^-\pi^+\pi^-$ exists yet. Not only would such a measurement complement the current measurements of $\gamma$, but it would also be crucial information for future studies of $D^0$-$\bar{D^0}$ oscillations and charm $C\!P$ violation.
+
+In this thesis report, the measurement of $\gamma$ in $B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$, using data from LHCb and BESIII, is presented. An optimised five-dimensional binning scheme is developed for this measurement. At BESIII, an inclusive phase space analysis of $D^0\to K^+K^-\pi^+\pi^-$ is first performed, and the strategies for expanding this strong-phase analysis into bins of phase space is described. Finally, the $B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$ decay is studied at LHCb, using model-predicted strong-phase inputs. When the BESIII analysis is completed in the near future, the LHCb result may be readily updated, which will result in the first measurement of $\gamma$ in this channel.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Formalism}
-\subsection{Strong-phase inputs from quantum-correlated \texorpdfstring{$D^0\bar{D^0}$}{DD} decays}
+\subsection{Strong-phase inputs from quantum-correlated \texorpdfstring{\boldmath{$D^0\bar{D^0}$}}{DD} decays}
 \noindent The formalism described in this Section closely follows that of Ref.~\cite{HarnewS4pi}. In charm factories, charm mesons are produced in $e^+e^-$ collisions at the $\psi(3770)$ resonance. The strong decay of $\psi(3770)\to D\bar{D}$ conserves the $C = -1$ quantum number of the initial state, leaving the $D$-meson pair in an anti-symmetric wave function. This quantum correlation allows for a direct access to the strong-phase difference between $D^0$ and $\bar{D^0}$ decays through a double-tag (DT) analysis. The method uses single-tag (ST) events, which are events where only one of the charm mesons is reconstructed, with no requirements on the decay of the other meson, and DT events, where both $D$ mesons are reconstructed, one in a tag mode and the other in the signal mode $D^0\to K^+K^-\pi^+\pi^-$.
 
 In DT events, the phase space of the $D\to K^+K^-\pi^+\pi^-$ decay is split into $2\times\mathcal{N}$ bins, labelled from $i = -\mathcal{N}$ to $i = \mathcal{N}$, excluding zero. Bin $-i$ is related to bin $+i$ by a $C\!P$ transformation. The choice of binning scheme is described in Sec.~\ref{section:Binning_scheme}. When the signal mode is tagged using different tag types, one may infer the strong-phase information by studying the bin yields. These will evolve in a non-trivial manner across different bins due to different strong-phase differences.
@@ -198,7 +200,7 @@ while Eq.~\eqref{equation:DT_ST_yield_ratio_K0pipi} becomes
 For a phase-space inclusive analysis, the strong-phase information is encoded in the $C\!P$-even fraction $F_+$ of the $D^0\to K^+K^-\pi^+\pi^-$ decay. The quantity $2F_+ - 1$ can be identified as the cosine of the amplitude-averaged strong-phase of the whole phase space.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Measurement of \texorpdfstring{$\gamma$}{gamma} using \texorpdfstring{$B^\pm$}{B} decays}
+\subsection{Measurement of \texorpdfstring{\boldmath{$\gamma$}}{gamma} using \texorpdfstring{\boldmath{$B^\pm$}}{B} decays}
 \noindent The analysis of $B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$ to determine $\gamma$ follows the formalism described in Ref.~\cite{LHCb-PAPER-2020-019}. The $B^-\to DK^-$ decay can proceed via the favoured $B^-\to D^0K^-$ amplitude, or via the suppressed $B^-\to\bar{D^0}K^-$ amplitude. The overall amplitude of this decay is a coherent sum of the two decay paths,
 \begin{equation}
     \mathcal{A}_B^-(\Phi) = \mathcal{A}_{B^-}^{D^0K^-}\Big(\mathcal{A}_{D^0}(\Phi) + r_B^{DK}\exp\big(i(\delta_B^{DK} - \gamma)\big)\mathcal{A}_{\bar{D^0}}(\Phi)\Big),
@@ -297,7 +299,7 @@ The binning scheme shown in Fig.~\ref{figure:Binning_scheme_plot_8bins} has $Q =
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Double-tag analysis of \texorpdfstring{$D^0\to K^+K^-\pi^+\pi^-$}{D2KKpipi} at BESIII}
+\section{Analysis of \texorpdfstring{\boldmath{$D^0\to K^+K^-\pi^+\pi^-$}}{D2KKpipi} at BESIII}
 \subsection{The BESIII detector}
 \noindent BESIII \cite{Ablikim:2009aa} is a general purpose solenoidal detector. The parts most relevant to this analysis are the Helium Multilayer Drift Chamber (MDC) for measuring the momenta and $\dd{E}/\dd{x}$ of charged particles, a Time Of Flight (TOF) system for particle ID and an ElectroMagnetic Calorimeter (EMC) to measure shower energies. The dataset currently under consideration, collected in 2010-2011, has $\SI{2.9}{\per\femto\barn}$ of $e^+e^-\to\psi(3770)$ events, but this will grow to $\SI{20}{\per\femto\barn}$ by the end of 2024~\cite{cite:BESIIIWhitePaper}. Part of this larger dataset has already been collected during 2022 and will be ready for analysis in the near future.
 
@@ -307,9 +309,9 @@ The binning scheme shown in Fig.~\ref{figure:Binning_scheme_plot_8bins} has $Q =
 
 Photon candidates are identified using showers in the EMC. The deposited energy of each shower must be more than 25~MeV in the barrel region ($|\cos \theta|< 0.80$) and more than 50~MeV in the end-cap region ($0.86 <|\!\cos \theta|< 0.92$). To exclude showers that originate from charged tracks, the angle subtended by the EMC shower and the position of the closest charged track at the EMC must be greater than 10 degrees as measured from the IP. To suppress electronic noise and showers unrelated to the event, the difference between the EMC time and the event-start time is required to be within [0, 700]\,ns.
 
-Particle identification~(PID) for charged tracks combines measurements of the d$E$/d$x$ in the MDC, and the time of flight as measured by the TOF system, to form likelihoods $\mathcal{L}(h)$ for each hadron hypothesis $h$ $(h=K,\pi)$. Charged kaons and pions are identified by comparing the likelihoods for the kaon and pion hypotheses, $\mathcal{L}(K)>\mathcal{L}(\pi)$ and $\mathcal{L}(\pi)>\mathcal{L}(K)$, respectively.
+Particle identification~(PID) for charged tracks combines measurements of d$E$/d$x$ in the MDC, and time of flight as measured by the TOF system, to form likelihoods $\mathcal{L}(h)$ for each hadron hypothesis $h$. Kaons and pions are identified by comparing the likelihoods for the kaon and pion hypotheses, $\mathcal{L}(K)>\mathcal{L}(\pi)$ and $\mathcal{L}(\pi)>\mathcal{L}(K)$, respectively.
 
-Each $K_{S}^0$ candidate is reconstructed from two oppositely charged tracks satisfying $|V_{z}|<$ 20~cm. The two charged tracks are assigned the pion hypothesis without imposing PID criteria. They are constrained to originate from a common vertex and are required to have an invariant mass within 12~MeV$/c^{2}$ of the known $K^0_{S}$ mass~\cite{pdg}. The decay length of the $K^0_S$ candidate is required to be greater than twice the vertex resolution away from the IP.
+Each $K_{S}^0$ candidate is reconstructed from two oppositely charged tracks satisfying $|V_{z}|<$ 20~cm. The two charged tracks are assigned the pion hypothesis without imposing PID criteria. They are constrained to originate from a common vertex and are required to have an invariant mass within 12~MeV$/c^{2}$ of the known $K^0_{S}$ mass~\cite{pdg}. The $K^0_S$ decay length is required to be greater than twice the vertex resolution away from the IP.
 
 Candidate $\pi^0$ and $\eta$ mesons are reconstructed through the decays $\pi^0\to\gamma\gamma$ and $\eta\to\gamma\gamma$, with their di-photon invariant masses required to be within $[115, 150]$ and $[480, 580]$~MeV$/c^2$, respectively. The $\eta^\prime$ meson is reconstructed through  $\eta^\prime\to\pi^+\pi^-\eta$ and $\rho^0(\pi^+\pi^-)\gamma$, with the invariant masses of the decay products within $[940, 976]$ and $[940, 970]$~MeV$/c^2$. The invariant mass of the pion pair in the $\rho^0$ decay must lie within $[626, 924]$~MeV$/c^2$.
 
@@ -317,19 +319,19 @@ In the reconstruction of $D\to\pi^+\pi^-\pi^0$ and $D\to K^+K^-\pi^+\pi^-$ decay
 
 For fully reconstructed tags, $\Delta E = E_D - \sqrt{s}/2$, where $E_D$ is the reconstructed energy of the $D$ meson, is required to be within $3\sigma$ of the signal peak. This requirement removes combinatorial background. In the tags containing a $K_L^0$, a partial reconstruction is performed where the signal $D\to K^+K^-\pi^+\pi^-$ is first reconstructed. From the remaining tracks and showers, the tag mode is reconstructed without the $K_L^0$ meson. It is required that there are no additional charged tracks or $\pi^0$ candidates. The $K_L^0$ momentum is then inferred from the missing momentum of the event. Since there is a missing particle, the ST yield cannot be measured in tag modes containing a $K_L^0$ meson.
 
-Additionally, to increase the yield of $K^+K^-\pi^+\pi^-$ vs $K_S^0\pi^+\pi^-$ DTs, events where a charged kaon is not reconstructed are also considered. The tag mode $D\to K_S^0\pi^+\pi^-$ is first reconstructed, and it is required that there are exactly three remaining tracks, identified as a kaon and two oppositely charged pions. The momentum of the charged kaon that is not reconstructed is inferred from the missing momentum. To reduce the background from $D\to K^-\pi^+\pi^-\pi^+\pi^0$ decays, it is required that there are no $\pi^0$ candidates in the event.
+Additionally, to increase the yield of $K^+K^-\pi^+\pi^-$ vs $K_S^0\pi^+\pi^-$ DTs, events where a charged kaon is not reconstructed are also considered. The tag mode $D\to K_S^0\pi^+\pi^-$ is first reconstructed, and it is required that there are exactly three remaining tracks, identified as a kaon and two oppositely charged pions. The momentum of the kaon that is not reconstructed is inferred from the missing momentum. To reduce background from $D\to K^-\pi^+\pi^-\pi^+\pi^0$ decays, it is required that there are no $\pi^0$ candidates in the event.
 
 In the $K_{S, L}^0\pi^+\pi^-$ tags, a Kalman kinematic fit~\cite{KalmanFit_cite} is performed to improve the resolution of the final-state particle momenta by constraining the $K_{S, L}^0$ and $D$ invariant masses to their known values~\cite{pdg}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Yield determination with \texorpdfstring{$M_{\rm BC}$}{MBC} fit}
+\subsection{Yield determination with \texorpdfstring{\boldmath{$M_{\rm BC}$}}{MBC} fit}
 \noindent The ST yield of each fully reconstructed tag mode is determined by a maximum-likelihood fit of the beam-constrained mass $M_{\rm BC} = \sqrt{E_{\rm beam}^2 - \big\lvert\sum_i\vec{p}_i\big\rvert^2}$, where the sum runs over the momenta $\vec{p}_i$ of all the $D$ decay products. The signal shape is obtained from simulation, but convolved with a Gaussian function to account for differences in resolution between data and simulation. The width of the Gaussian function is a free parameter in the fit and the difference in resolution between data and simulation was found to be a few hundred ${\rm keV}/c^2$. Since the difference is small, no further correction to the simulation is performed. The combinatorial background is modelled by an ARGUS function.
 
 For the partially reconstructed tag mode $D\to K_L^0\pi^0$, the ST yield cannot be measured directly. Nonetheless, an effective ST reconstruction efficiency is calculated from $\epsilon_{\rm ST}(K_L\pi^0) = \epsilon_{\rm DT}(KK\pi\pi|K_L\pi^0)/\epsilon_{\rm ST}(KK\pi\pi)$. The effective ST yield is then calculated from this efficiency, the branching fraction~\cite{cite:deltaKpi}, and the number of $D\bar{D}$ pairs $N_{D\bar{D}}$.
 
 The level of peaking background in the fully reconstructed tag modes is around $1\%$ or less. In tag modes containing a $K_L^0$ there is a larger contamination from $K_S^0\to\pi^0\pi^0$ decays, where the $\pi^0$ mesons are not reconstructed. This peaking background is found from simulation to be around $6\%$ of the signal yield. The shapes of peaking backgrounds are fixed from simulation samples, while the yields are calculated from the branching fractions and efficiencies, relative to that of the signal yield.
 
-Similarly, for fully reconstructed DT events, the $M_{\rm BC}$ on the signal side is fitted. The approach is identical to that for ST candidates, but corrections are applied to the peaking-background estimates to account for enhancements and suppressions due to quantum correlations. The quantum-correlation corrections are calculated using knowledge of the $C\!P$ contents of both the signal and tag modes. The $C\!P$ content of $D^0\to K^+K^-\pi^+\pi^-$ is obtained from the amplitude model in Ref.~\cite{LHCb-PAPER-2018-041}. Fits where the signal or tag modes are split into bins of phase space are performed simultaneously, such that signal-shape parameters are shared between all bins, while the yields are varied independently in each bin. For partially reconstructed tag modes, a fit of the missing-mass squared $M_{\rm miss}^2$ of the missing particle is performed instead. Fig.~\ref{figure:DT_MBC} shows examples of DT fits of the three $C\!P$ tags with highest statistics.
+Similarly, for fully reconstructed DT events, the $M_{\rm BC}$ on the signal side is fitted. The approach is identical to that for ST candidates, but corrections are applied to the peaking-background estimates to account for enhancements and suppressions due to quantum correlations. The quantum-correlation corrections are calculated using knowledge of the $C\!P$ contents of both the signal and tag modes. The $C\!P$ content of $D^0\to K^+K^-\pi^+\pi^-$ is obtained from the amplitude model in Ref.~\cite{LHCb-PAPER-2018-041}. Fits where the signal or tag modes are split into bins of phase space are performed simultaneously, such that signal-shape parameters are shared between all bins, while the yields are varied independently in each bin. For partially reconstructed tag modes, a fit of the missing-mass squared $M_{\rm miss}^2$ of the missing particle is performed instead. Fig.~\ref{figure:DT_MBC} shows examples of DT fits of three $C\!P$ tags.
 
 \begin{figure*}[htb]
     \centering
@@ -349,7 +351,7 @@ There are several sources of systematic uncertainty, but most of these are very 
 \begin{figure*}[htb]
     \centering
     \includegraphics[width=0.5\textwidth]{Plots/CPeven_fraction_combination_CPtags.png}
-    \caption{The effective branching fraction (BF) of $D\to K^+K^-\pi^+\pi^-$ measured against $C\!P$-odd (top), $D\to\pi^+\pi^-\pi^0$ and $C\!P$-even (bottom) tags. The black dotted lines indicate the values expected from the fit.}
+    \caption{The branching fraction of $D\to K^+K^-\pi^+\pi^-$ measured with $C\!P$-odd (top) and $C\!P$-even (bottom) tags. The black dotted lines indicate the values expected from the fit.}
     \label{figure:FPlus_CP_tags}
 \end{figure*}
 
@@ -358,12 +360,12 @@ A similar fit is performed for the modes $K^0_{S, L}\pi^+\pi^-$, using the relat
 In 2022, $\SI{5}{\per\femto\barn}$ of $\psi(3770)$ was successfully collected at BESIII, bringing the total dataset to $\SI{8}{\per\femto\barn}$. Using the same selection on this larger dataset, a first measurement of $c_i$ and $s_i$ will be performed. The yield determination will follow an identical strategy and the strong-phase fit will use Eqs.~\eqref{equation:DT_ST_yield_ratio} and \eqref{equation:DT_ST_yield_ratio_K0pipi}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Analysis of \texorpdfstring{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}{B2DhD2KKpipi} at LHCb}
+\section{Analysis of \texorpdfstring{\boldmath{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}}{B2DhD2KKpipi} at LHCb}
 \subsection{The LHCb detector}
 \noindent LHCb \cite{LHCb-DP-2008-001} is a single arm forward spectrometer designed to study beauty and charm hadrons in $pp$ collisions. The components important for this analysis are the tracking system and the Ring Imaging Cherenkov counters (RICH1 and RICH2). The tracking system includes the Vertex Locator (VELO), which provide high precision tracking and identification of displaced secondary vertices. A dipole magnet and the tracking stations measure charged particle momenta. The RICH detectors provides identification of kaons and pions. A $\SI{9}{\per\femto\barn}$ dataset at $\sqrt{s} = 7$, $8$ and $\SI{13}{\tera\eV}$ will be used in this analysis.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{\texorpdfstring{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}{B2DhD2KKpipi} candidate selection}
+\subsection{\texorpdfstring{\boldmath{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}}{B2DhD2KKpipi} candidate selection}
 \label{section:Candidate_selection}
 \noindent A $B^\pm$ candidate is reconstructed by combining five charged tracks. Four of the charged tracks are required to have an invariant mass within $\SI{25}{\mega\eV/c^2}$ of the $D^0$ meson mass~\cite{pdg}. This requirement, which corresponds to around two and a half times the resolution of the mass peak, removes processes that have either a missing or misidentified particle.
 
@@ -378,7 +380,7 @@ Combinatorial background is suppressed using a boosted decision tree~(BDT). Simu
 To improve the resolution of the momenta of the $D$-decay products and the invariant mass of the $B^\pm$ candidate, a kinematic fit is performed in which the $D$ meson candidate is constrained to its known mass~\cite{pdg}, and the $B^\pm$ candidate is required to originate from its PV. This is defined as the PV with the smallest impact parameter.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{\texorpdfstring{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}{B2DhD2KKpipi} global mass fit and binned CP fit}
+\section{\texorpdfstring{\boldmath{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}}{B2DhD2KKpipi} global mass fit and binned CP fit}
 \noindent An unbinned, extended maximum-likelihood fit is performed to the invariant-mass spectrum of the $B^\pm\to[K^-K^+\pi^+\pi^+]_Dh^\pm$ candidates in the range from $\SI{5080}{\mega\eV/c^2}$ to $\SI{5700}{\mega\eV/c^2}$. The fit is first performed on the $B^\pm\to DK^\pm$ and $B^\pm\to D\pi^\pm$ candidates, integrated over all phase-space bins, which is referred to as the global fit. The global fit is used to determine the parameters of the functions that describe the signal and background invariant-mass distributions. The $B^\pm\to[K^-K^+\pi^+\pi^-]_Dh^\pm$ invariant-mass distributions are shown in Fig.~\ref{figure:Global_fit}.
 
 The yield of $B^\pm\to D\pi^\pm$ is varied separately for the two $D$ decays, while the yield of $B^\pm\to DK^\pm$ is parameterised as a ratio relative to the $B^\pm\to D\pi^\pm$ yield. This ratio is a common fit parameter, as are the parameters that describe the signal shape.
@@ -479,7 +481,7 @@ In Table~\ref{table:GGSZ_observables}, the first uncertainty is statistical, the
 The $C\!P$-violation effects can be illustrated directly by considering the asymmetries in each bin. This information is obtained from an alternative fit where the signal yields, instead of the $C\!P$-violating observables, are determined. The bin asymmetries, $(N_i^- - N_{-i}^+)/(N_i^- + N_{-i}^+)$, calculated from these yields are shown in Fig.~\ref{figure:Bin_asymmetries}. The bin yields are normalised separately for $B^-$ and $B^+$, so that only bin-to-bin variations are apparent. Some of those for $B^\pm\to DK^\pm$ are significant, and exhibit a non-trivial distribution, which is driven by the variation in the strong-phase difference between $D^0$ and $\bar{D^0}$ decays. In the $B^\pm\to D\pi^\pm$ mode, there is a lower sensitivity to $C\!P$ violation and therefore no such behaviour is seen. Although the results shown in Fig.~\ref{figure:CP_observables} depend on strong-phases predicted from an amplitude model, the $C\!P$-violation seen in Fig.~\ref{figure:Bin_asymmetries_DK} are model-independent.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Interpretation in terms of \texorpdfstring{$\gamma$}{gamma}}
+\section{Interpretation in terms of \texorpdfstring{\boldmath{$\gamma$}}{gamma}}
 \noindent The $C\!P$-violating observables in Table~\ref{table:GGSZ_observables} can be expressed in terms of $\gamma$ and other physics parameters using Eq.~\eqref{equation:CP_observables}, using a maximum likelihood fit. The result is
 
 \begin{align*}
