--- a/DPhilThesisOutline.tex
+++ b/DPhilThesisOutline.tex
@@ -92,20 +92,105 @@
     \item[\textendash]{Present the double tag method and tag types}
     \item[\textendash]{Derive yield equations for the strong-phase fits}
   \end{itemize}
+\leavevmode\newline
+\textit{Sections \ref{section_The_BESIII_experiment}-\ref{section_Analysis_of_D02KKpipi_strong_phases} describe the BESIII analysis. Currently, a paper on the inclusive phase space measurement has been published in PRD. The binned phase space analysis is ongoing and expected to finish at the end of TT23.}
+\section{The BESIII experiment}
+\label{section_The_BESIII_experiment}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{0em}
+    \item{Description of the BESIII experiment and the available data sets}
+    \item{Focus on MDC, TOF system and EMC}
+  \end{itemize}
 
+\section{Selection of single- and double-tagged \texorpdfstring{\boldmath{$D^0\to K^+K^-\pi^+\pi^-$}}{D02KKpipi}}
+\label{section_Selection_of_single_and_double_tag_D02KKpipi_events}
+\subsection{Event selection}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2em}
+    \item[\textendash]{Overview of all the selection requirements}
+  \end{itemize}
+\subsubsection{Particle selection}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Charged pion and kaon track requirements}
+    \item[\textasteriskcentered]{Photon shower requirements}
+    \item[\textasteriskcentered]{Neutral composite particles}
+  \end{itemize}
+\subsubsection{Tag selection}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Reconstruction of fully and partially reconstructed $D$-mesons}
+    \item[\textasteriskcentered]{Novel technique for partially reconstruction of $D\to K^+K^-\pi^+\pi^-$}
+    \item[\textasteriskcentered]{Final selection of single- and double-tag events}
+    \item[\textasteriskcentered]{Quantum correlated phase space reweighting}
+  \end{itemize}
+
+\section{Analysis of \texorpdfstring{\boldmath{$D^0\to K^+K^-\pi^+\pi^-$}}{D02KKpipi} strong phases}
+\label{section_Analysis_of_D02KKpipi_strong_phases}
+\subsection{Yield determinations using mass fits}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2em}
+    \item[\textendash]{Overview of strategy for determining event yields}
+  \end{itemize}
+\subsubsection{Single tag yields}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Description of mass shapes}
+    \item[\textasteriskcentered]{Extraction of single tag yields}
+  \end{itemize}
+\subsubsection{Double tag yields}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Description of mass shapes and fit strategy}
+    \item[\textasteriskcentered]{Simultaneous fit of double tag yields}
+  \end{itemize}
+\subsubsection{Peaking backgrounds}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Determination of background yield and mass shapes from simulation}
+    \item[\textasteriskcentered]{Quantum correlation corrections in double tag yields}
+  \end{itemize}
+\subsection{Systematic uncertainties}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2em}
+    \item[\textendash]{Very brief description of each systematic uncertainty considered}
+  \end{itemize}
+\subsubsection{External parameters}
+\subsubsection{Model dependence}
+\subsubsection{Peaking backgrounds}
+\subsubsection{Single tag yields of \texorpdfstring{$K^0_LX$}{KLX} tags}
+\subsubsection{Efficiency factorisation}
+\subsubsection{\texorpdfstring{$K^0_S$}{KS0} veto}
+\subsubsection{Summary of systematic uncertainties}
+\subsection{Maximum likelihood fit of strong phases}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2em}
+    \item[\textendash]{Description of likelihood function and fitter}
+  \end{itemize}
+\subsubsection{Inclusive phase space measurement}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Present measurement of $F_+$}
+  \end{itemize}
+\subsubsection{Binned phase space measurement}
+  \begin{itemize}[nosep]
+    \setlength{\itemindent}{2.5em}
+    \item[\textasteriskcentered]{Present fit results for $c_i$ and $s_i$}
+    \item[\textasteriskcentered]{Comparison with model prediction}
+    \item[\textasteriskcentered]{Evaluation of binning scheme performance and impact on $\gamma$ measurement}
+  \end{itemize}
+\leavevmode\newline
+\noindent\textit{Sections \ref{section_The_LHCb_experiment}-\ref{section_Analysis_of_B2DhD2KKpipi} describe the LHCb analysis. The analysis has been completed and a paper on the measurement of $\gamma$ has been submitted to EPJC.}
 \section{The LHCb experiment}
+\label{section_The_LHCb_experiment}
   \begin{itemize}[nosep]
     \setlength{\itemindent}{0em}
     \item{Description of the LHCb experiment during Run\,$1$ and $2$}
     \item{Focus on VELO, tracking system and RICH}
   \end{itemize}
 
-\section{Analysis of \texorpdfstring{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}{B2DhD2KKpipi} candidates}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{0em}
-    \item{This section contains the whole LHCb analysis}
-    \item{Status: Paper submitted to EPJC}
-  \end{itemize}
+\section{Selection of \texorpdfstring{\boldmath{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}}{B2DhD2KKpipi} candidates}
+\label{section_Selection_of_B2Dh_D2KKpipi_candidates}
 \subsection{Data selection}
   \begin{itemize}[nosep]
     \setlength{\itemindent}{2em}
@@ -160,6 +245,9 @@
     \setlength{\itemindent}{2.5em}
     \item[\textasteriskcentered]{Present full study of single and triple mis-ID}
   \end{itemize}
+
+\section{Analysis of \texorpdfstring{\boldmath{$B^\pm\to[K^+K^-\pi^+\pi^-]_Dh^\pm$}}{B2DhD2KKpipi}}
+\label{section_Analysis_of_B2DhD2KKpipi}
 \subsection{Invariant mass fits}
   \begin{itemize}[nosep]
     \setlength{\itemindent}{2em}
@@ -201,100 +289,10 @@
     \item[\textendash]{Highlight the difference between model-dependent and independent results}
     \item[\textendash]{Compare with latest LHCb combination}
   \end{itemize}
-
-\section{The BESIII experiment}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{0em}
-    \item{Description of the BESIII experiment and the available data sets}
-    \item{Focus on MDC, TOF system and EMC}
-  \end{itemize}
-
-\section{Analysis of \texorpdfstring{$D^0\to K^+K^-\pi^+\pi^-$}{D02KKpipi} strong phases}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{0em}
-    \item{This section contains the whole BESIII analysis}
-    \item{Status: Paper on inclusive phase space measurement submitted to PRD}
-    \item{Plan: Binned analysis is ongoing and is expected to finish at the end of TT23}
-  \end{itemize}
-\subsection{Event selection}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2em}
-    \item[\textendash]{Overview of all the selection requirements}
-  \end{itemize}
-\subsubsection{Particle selection}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Charged pion and kaon track requirements}
-    \item[\textasteriskcentered]{Photon shower requirements}
-    \item[\textasteriskcentered]{Neutral composite particles}
-  \end{itemize}
-\subsubsection{Tag selection}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Reconstruction of fully and partially reconstructed $D$-mesons}
-    \item[\textasteriskcentered]{Final selection of single- and double-tag events}
-    \item[\textasteriskcentered]{Quantum correlated phase space reweighting}
-  \end{itemize}
-\subsection{Yield determinations using mass fits}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2em}
-    \item[\textendash]{Overview of strategy for determining event yields}
-  \end{itemize}
-\subsubsection{Single tag yields}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Description of mass shapes}
-    \item[\textasteriskcentered]{Extraction of single tag yields}
-  \end{itemize}
-\subsubsection{Double tag yields}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Description of mass shapes and fit strategy}
-    \item[\textasteriskcentered]{Simultaneous fit of double tag yields}
-  \end{itemize}
-\subsubsection{Peaking backgrounds}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Determination of background yield and mass shapes from simulation}
-    \item[\textasteriskcentered]{Quantum correlation corrections in double tag yields}
-  \end{itemize}
-\subsection{Systematic uncertainties}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2em}
-    \item[\textendash]{Very brief description of each systematic uncertainty considered}
-  \end{itemize}
-\subsubsection{External parameters}
-\subsubsection{Model dependence}
-\subsubsection{Peaking backgrounds}
-\subsubsection{Single tag yields of \texorpdfstring{$K^0_LX$}{KLX} tags}
-\subsubsection{Efficiency factorisation}
-\subsubsection{\texorpdfstring{$K^0_S$}{KS0} veto}
-\subsubsection{Summary of systematic uncertainties}
-\subsection{Maximum likelihood fit of strong phases}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2em}
-    \item[\textendash]{Description of likelihood function and fitter}
-  \end{itemize}
-\subsubsection{Inclusive phase space measurement}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Present measurement of $F_+$}
-  \end{itemize}
-\subsubsection{Binned phase space measurement}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Present fit results for $c_i$ and $s_i$}
-    \item[\textasteriskcentered]{Comparison with model prediction}
-    \item[\textasteriskcentered]{Evaluation of binning scheme performance and impact on $\gamma$ measurement}
-  \end{itemize}
-
+\leavevmode\newline
+\noindent\textit{Section \ref{section_Analysis_of_TORCH_testbeam_PID_performance} contains the PID study with TORCH testbeam data. The PID likelihood algorithm has already been tested on 2018 testbeam data. The analysis of PID performance using 2022 testbeam data is ongoing and expected to finish at the end of 2023.}
 \section{Analysis of TORCH testbeam PID performance}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{0em}
-    \item{This section contains the whole TORCH analysis}
-    \item{Status: PID likelihood calculation successfully tested on 2018 testbeam data}
-    \item{Plan: Analysis of PID performance using 2022 testbeam data is ongoing and expected to finish at the end of 2023}
-  \end{itemize}
+\label{section_Analysis_of_TORCH_testbeam_PID_performance}
 \subsection{The TORCH detector}
   \begin{itemize}[nosep]
     \setlength{\itemindent}{2em}
@@ -306,7 +304,6 @@
     \item[\textasteriskcentered]{Motivate the need for low momentum PID at LHCb}
     \item[\textasteriskcentered]{Explain how TORCH combines timing and Cherenkov information}
     \item[\textasteriskcentered]{Show the design of TORCH}
-    \item[\textasteriskcentered]{Briefly introduce previous studies of timing performance}
   \end{itemize}
 \subsection{PID likelihood calculation}
   \begin{itemize}[nosep]
@@ -319,16 +316,6 @@
     \item[\textendash]{Briefly mention the motivation and goals of this testbeam campaign}
   \end{itemize}
 \subsubsection{Testbeam setup}
-  \begin{itemize}[nosep]
-    \setlength{\itemindent}{2.5em}
-    \item[\textasteriskcentered]{Proto-TORCH}
-    \item[\textasteriskcentered]{The Proton Synchrotron T9 beam line}
-    \item[\textasteriskcentered]{Cherenkov counters}
-    \item[\textasteriskcentered]{Large scintillators}
-    \item[\textasteriskcentered]{Timing stations}
-    \item[\textasteriskcentered]{Beam telescope}
-    \item[\textasteriskcentered]{Trigger Logic Unit}
-  \end{itemize}
 \subsubsection{PID study of testbeam}
   \begin{itemize}[nosep]
     \setlength{\itemindent}{2.5em}
